# Job_Application_Tracker_Env

./: .gitignore  Dockerfile  README.md  environment.py  inference.py  openenv.yaml  prompts.py  pyproject.toml  requirements.txt  rewards.py  run_tests.py  server.py  tasks.py
server/: app.py
static/: index.html
tests/: test_environment.py
