[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job_application_tracker"
version = "1.0.0"
description = "A simulation environment where an AI agent manages job applications."
authors = [
    {name = "Job Tracker Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.3.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[project.scripts]
server = "server.app:main"
